add photo and change

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>green mart</title>
 </head>
 <body>
-    <h1> bhai torkari lagle janaben</h1>
-    <p>horek rokom torkari jemon ,, alu ,,ptol jhinga ..kochu ,,fulkopi ettadi</p>
+    <h1> RIfat Jokhon jiboner prothom date e jay </h1>
+    <p>salay ekta luiccha</p>
+    <img src="Screenshot 2025-06-27 204016.png" alt="rifat">
 </body>
 </html>
